# crate

./: Cargo.toml  LICENSE  README.md
examples/: autodiff_example.rs
src/: autodiff.rs  error.rs  expression.rs  lib.rs  macros.rs  tensor.rs  view.rs
src/autodiff/: graph.rs  mod.rs  ops.rs  tensor.rs
src/dimension/: dynamic.rs  mod.rs  shape.rs  static_.rs  static_dim.rs  stride.rs
src/expression/: eval.rs  fusion.rs  mod.rs  nodes.rs
src/linalg/: decomposition.rs  inverse.rs  matmul.rs  mod.rs  transpose.rs
src/nn/: activations.rs  init.rs  layers.rs  losses.rs  mod.rs  optimizers.rs
src/nn/layers/: batch_norm.rs  conv2d.rs  dense.rs  dropout.rs  lstm.rs  mod.rs  rnn.rs
src/ops/: arithmetic.rs  elementwise.rs  math.rs  mod.rs  reduction.rs
src/storage/: cpu.rs  cuda.rs  mmap.rs  mod.rs  utils.rs
src/view/: mod.rs  ops.rs  slice.rs
tensorust-demo/: Cargo.toml  README.md  build.sh
tensorust-demo/src/: lib.rs
tensorust-demo/static/: index.html
tests/: autodiff_tests.rs
