[package]
name = "tensorust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tensorust"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
rand = "0.8"
memmap2 = "0.5"
uuid = { version = "1.0", features = ["v4"] }
cuda-driver-sys = "0.3.0"

[features]
autodiff = []
cuda = []
mmap = []

[workspace]
members = ["tensorust-demo"]
