[package]
name = "tensorust-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tensorust = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"

console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
